# decky-wol

./: .gitignore  README.md  main.py  plugin.json
backend/: Cargo.toml  Dockerfile  Makefile
backend/src/: main.rs
backend/src/discovery/: mod.rs
backend/src/discovery/models/: mod.rs
backend/src/discovery/routes/: mod.rs
backend/src/discovery/services/: mod.rs
backend/src/settings/: mod.rs
backend/src/settings/models/: mod.rs
backend/src/settings/routes/: mod.rs
backend/src/settings/services/: mod.rs
backend/src/wol/: mod.rs
backend/src/wol/routes/: mod.rs
backend/src/wol/services/: mod.rs
src/: index.tsx
src/api/: index.ts
src/hooks/: useDiscoveredDevices.ts  useSetting.ts  useStoredDevices.ts
src/models/: index.ts
src/pages/settings/: index.tsx
src/pages/settings/devices/: index.tsx
src/pages/settings/devices/update-device-modal/: index.tsx
src/pages/settings/navigation/: index.tsx
