[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.68"
actix = "0.13.5"
actix-web = "4"
actix-cors = "0.7.0"
tokio = "1.41"
env_logger = "0.11.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.108"
home = "0.5.9"
anyhow = "1.0.92"
ping = "0.5.2"
local-ip-address = "0.6.3"
hex = "0.4.3"
wake-on-lan = "0.2.0"